1.3.0 (beta)

 - Add CSRF protection option (on by default). (Steve McMahon)

 - Added support for choosing an alternate csv text delimiter for Save Data 
   Adapters. (Jesse Snyder)

 - Adapters are now activated when pasted into form folders. (Jesse Snyder)

 - Added 'force SSL' option for form folders. (David Glick)

 - Removed validator from the form action override field. This allows
   relative urls in the override. (Michael Dunlap)

 - Add Bcc override for mailer. (Steve McMahon)

 - Validator for multiple comma separated email addresses is now an
   option for string fields. (Paul Bugni)

 - Added "Include Empties" flag to mailer. On by default. Similar to
   thanks page. (Steve McMahon)

 - Wrap rendered rich label fields in div with selectors similar to
   other Archetypes widgets. (Steve McMahon)

 - The default view of all form fields is now base_edit. There's a
   UI problem left that the "view" tab is selected on initial jump
   into the field even though you're seeing the edit view.
   (Steve McMahon)

 - Link spam prevention is now an option for string and text fields.
   (Jon Baldivieso)

 - Allow use of any string field for mailer recipient choice. A bit
   scary until we get captchas built in. (Steve McMahon)

 - Mailer now has an option to select among available fields those
   which should be included in the e-mail. Interface is identical to 
   thanks page. (Steve McMahon)

 - Added support for embedding PFG forms into other templates.  See
   README_EMBEDDING.txt for details. (David Glick)

 - Clean out 2.1 compatibility code. Ahhhh! (Steve McMahon)

 - Pulling out removeSkinLayer for arg PloneFormGenPlone3, since
   this appears to have not existed and certainly is unnecessary
   currently (Andrew Burkhalter)
 
 - Removed unneeded and unused legacy typesonly profile directory 
   (Andrew Burkhalter)

 - Installation process is entirely based upon GenericSetup extension
   profiles to the level that is pragmatic for support of Plone 2.5.x