@@ -1,5 +1,8 @@
 1.3.0 (beta)
 
+ - Add ${key} style substitution from form dictionary
+   for subject field override. (Steve McMahon)
+
  - Add CSRF protection option (on by default). (Steve McMahon)
 
  - Added support for choosing an alternate csv text delimiter for Save Data 
